patching IE bug where loading bar is cut off vertically

--- a/src/Components/Common/Loading/Loading.less
+++ b/src/Components/Common/Loading/Loading.less
@@ -5,7 +5,7 @@
 
     & .progress-bar {
       font-size: inherit;
-      line-height: initial;
+      line-height: normal;
     }
   }
 }
